272 - Fix trigger logic